--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -10,11 +10,10 @@
 /* Navigation related breakpoints */
 @custom-media --nav-md (min-width: 500px);
 @custom-media --nav (min-width: 1200px);
-@custom-media --nav-lg (min-width: 1200px);
 
 /* Grid related breakpoints */
-@custom-media --grid-lg (min-width: 700px);
-@custom-media --grid-max (min-width: 1440px); /* When the grid reaches its max size */
+@custom-media --grid-md (min-width: 700px);
+@custom-media --grid-max (min-width: 1440px); /* When the width of the entire grid maxes out. */
 
 :root {
   --font-sans: 'metropolis';
@@ -26,35 +25,39 @@
   --sp: 18px;
   --content-left: 90px;
 
-  /* grid helpers */
-  --scrollbar-width: 15px;
+  /*
+  grid helpers
+  */
+  --scrollbar-width: 15px; /* Approximate width of a scrollbar. Doesn't have to be perfect. */
   --grid-gap: var(--sp);
 
-  --grid-col-count: 6;
-  --grid-col-count--lg: 14;
+  /* Column count at various breakpoints. */
+  --grid-col-count:       6;
+  --grid-col-count--md:   14;
+  --grid-col-count--lg:   var(--grid-col-count--md);
+  --grid-col-count--nav:  var(--grid-col-count--md);
+  --grid-col-count--max:  var(--grid-col-count--md);
 
-  --grid-gap-count: calc(var(--grid-col-count) - 1);
-  --grid-gap-count--lg: calc(var(--grid-col-count--lg) - 1);
+  /* Count of grid-gaps at various breakpoints. */
+  --grid-gap-count:       calc(var(--grid-col-count) - 1);
+  --grid-gap-count--md:   calc(var(--grid-col-count--md) - 1);
+  --grid-gap-count--lg:   calc(var(--grid-col-count--lg) - 1);
+  --grid-gap-count--nav:  var(--grid-gap-count--lg);
+  --grid-gap-count--max:  var(--grid-gap-count--lg);
 
-  --grid-full-width: calc(100vw - var(--scrollbar-width) - var(--sp2));
-  --grid-full-width--lg: calc(100vw - var(--scrollbar-width) - var(--content-left) - var(--sp2));
+  /* Width of the entire grid at various breakpoints. */
+  --grid-full-width:      calc(100vw - var(--sp2));
+  --grid-full-width--md:  var(--grid-full-width);
+  --grid-full-width--lg:  calc(var(--grid-full-width) - var(--scrollbar-width));
+  --grid-full-width--nav: calc(100vw - var(--scrollbar-width) - var(--content-left) - var(--sp2));
   --grid-full-width--max: calc(var(--max-width) - var(--sp2));
 
-  --grid-width: calc((var(--grid-full-width) - (var(--grid-gap-count) * var(--grid-gap))) / var(--grid-col-count));
-  --grid-width--lg: calc((var(--grid-full-width--lg) - (var(--grid-gap-count--lg) * var(--grid-gap))) / var(--grid-col-count--lg));
-
-  /* Use at 1440px */
-  --grid-width--max: calc((var(--grid-full-width--max) - (var(--grid-gap-count--lg) * var(--grid-gap))) / var(--grid-col-count--lg));
-
-
-  /* calc((calc(1350px - calc(2 * 18px)) - (calc(6 - 1) * 18px)) / 14) + 18px) */
-
-
-
-  /* --grid-width: calc((var(--grid-full-width) - (var(--grid-gap-count) * var(--grid-gap))) / var(--grid-col-count)); */
-
-/* calc((100vw - 285px)/14) */
-
+  /* Width of a grid column at various breakpoints */
+  --grid-col-width:           calc((var(--grid-full-width) - (var(--grid-gap-count) * var(--grid-gap))) / var(--grid-col-count));
+  --grid-col-width--md:       calc((var(--grid-full-width--md) - (var(--grid-gap-count--md) * var(--grid-gap))) / var(--grid-col-count--md));
+  --grid-col-width--lg:       calc((var(--grid-full-width--lg) - (var(--grid-gap-count--lg) * var(--grid-gap))) / var(--grid-col-count--lg));
+  --grid-col-width--nav:      calc((var(--grid-full-width--nav) - (var(--grid-gap-count--nav) * var(--grid-gap))) / var(--grid-col-count--nav));
+  --grid-col-width--max:      calc((var(--grid-full-width--max) - (var(--grid-gap-count--max) * var(--grid-gap))) / var(--grid-col-count--max));
 
 
   /* Layout helpers */
