--- a/src/css/components/embedded-media.css
+++ b/src/css/components/embedded-media.css
@@ -5,13 +5,26 @@ figure {
     margin: var(--sp3) 0;
     max-width: 100%;
 
-    @media (--md) {
+    @media (--grid-md) {
       float: right;
+      width: calc(5 * var(--grid-col-width--md) + 4 * var(--grid-gap));
+      margin-right: calc(-2 * ((var(--grid-col-width--md) + var(--grid-gap))));
+      margin-left: var(--sp);
     }
 
     @media (--lg) {
-      margin-right: calc(-2 * var(--grid-width));
+      width: calc(5 * var(--grid-col-width--lg) + 4 * var(--grid-gap));
+      margin-right: calc(-2 * ((var(--grid-col-width--lg) + var(--grid-gap))));
+    }
 
+    @media (--nav) {
+      width: calc(5 * var(--grid-col-width--nav) + 4 * var(--grid-gap));
+      margin-right: calc(-3 * ((var(--grid-col-width--nav) + var(--grid-gap))));
+    }
+
+    @media (--grid-max) {
+      width: calc(5 * var(--grid-col-width--max) + 4 * var(--grid-gap));
+      margin-right: calc(-3 * ((var(--grid-col-width--max) + var(--grid-gap))));
     }
   }
 }
