--- a/src/css/components/main.css
+++ b/src/css/components/main.css
@@ -57,19 +57,26 @@ main {
     line-height: var(--sp2);
     letter-spacing: -0.01em;
 
-    @media (--md) {
-      margin: var(--sp3) calc(-1 * var(--grid-width)) var(--sp3) 0;
+    @media (--grid-md) {
+      margin: var(--sp3) 0;
+      width: calc(10 * var(--grid-col-width--md) + 9 * var(--grid-gap));
       padding: 0;
-      width: calc(100% + var(--grid-width));
       font-size: 32px;
       line-height: var(--sp3);
     }
 
     @media (--lg) {
-      margin-right: calc(-2 * var(--grid-width));
-      width: calc(100% + (2 * var(--grid-width)));
+      width: calc(10 * var(--grid-col-width--lg) + 9 * var(--grid-gap));
       font-size: 48px;
       line-height: var(--sp4);
+    }
+
+    @media (--nav) {
+      width: calc(10 * var(--grid-col-width--nav) + 9 * var(--grid-gap));
+    }
+
+    @media (--grid-max) {
+      width: calc(10 * var(--grid-col-width--max) + 9 * var(--grid-gap));
     }
 
     &:before {
@@ -80,8 +87,20 @@ main {
       color: #53B0EB;
       font-size: 54px;
 
-      @media (--md) {
-        left: calc(-1 * var(--grid-width));
+      @media (--grid-md) {
+        left: calc(-1 * (var(--grid-col-width--md) + var(--grid-gap)));
+      }
+
+      @media (--lg) {
+        left: calc(-1 * (var(--grid-col-width--lg) + var(--grid-gap)));
+      }
+
+      @media (--nav) {
+        left: calc(-1 * (var(--grid-col-width--nav) + var(--grid-gap)));
+      }
+
+      @media (--grid-max) {
+        left: calc(-1 * (var(--grid-col-width--max) + var(--grid-gap)));
       }
     }
 
@@ -95,11 +114,23 @@ main {
       height: calc(100% - 30px);
       margin-left: 4px;
 
-      @media (--md) {
-        left: calc(-1 * var(--grid-width));
+      @media (--grid-md) {
+        left: calc(-1 * (var(--grid-col-width--md) + var(--grid-gap)));
         width: var(--sp);
         height: calc(100% - 45px);
         margin-left: 2px;
+      }
+
+      @media (--lg) {
+        left: calc(-1 * (var(--grid-col-width--lg) + var(--grid-gap)));
+      }
+
+      @media (--nav) {
+        left: calc(-1 * (var(--grid-col-width--nav) + var(--grid-gap)));
+      }
+
+      @media (--grid-max) {
+        left: calc(-1 * (var(--grid-col-width--max) + var(--grid-gap)));
       }
     }
   }
