--- a/src/css/base/layout.css
+++ b/src/css/base/layout.css
@@ -12,14 +12,13 @@
   grid-column-gap: var(--grid-gap);
 
   @media (--grid-md) {
-    grid-template-columns: repeat(var(--grid-col-count--lg), 1fr);
+    grid-template-columns: repeat(var(--grid-col-count--md), 1fr);
   }
 }
 
 .page-wrapper {
   max-width: var(--max-bg-color);
   background: white;
-
 }
 
 .content {
