--- a/src/css/components/social-container.css
+++ b/src/css/components/social-container.css
@@ -3,34 +3,40 @@
     width: var(--content-left);
     flex-shrink: 0;
     background-color: #F7F9FA;
-
-    .rotate {
-      display: flex;
-      align-items: center;
-      width: 100%;
-      margin: var(--sp) auto;
-      transform: rotate(-90deg);
-      white-space: nowrap;
-    }
-
-    .social-label {
-      margin-right: var(--sp);
-      margin-top: -2px;
-      font-size: 12px;
-      letter-spacing: 4px;
-      text-transform: uppercase;
-      color: #98ABB9;
-    }
   }
 }
 
+.rotate {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+  @media (--nav) {
+    justify-content: flex-start;
+    width: 100%;
+    margin: var(--sp) auto;
+    transform: rotate(-90deg);
+    white-space: nowrap;
+  }
+}
+
+.social-label {
+  margin-right: var(--sp);
+  margin-top: -2px;
+  font-size: 12px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: #98ABB9;
+}
+
 .social-container__inner {
+  padding: var(--sp0-5) var(--sp);
+  background-color: #F7F9FA;
+
   @media (--nav) {
     position: relative;
     width: var(--content-left);
-    background-color: #F7F9FA;
     padding: var(--sp8) 0;
-
 
     &.js-fixed {
       position: fixed;
