--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,7 @@
 @import 'components/embedded-media.css';
 @import 'components/header.css';
 @import 'components/hero.css';
+@import 'components/footer.css';
 @import 'components/nav-button-mobile.css';
 @import 'components/nav-button-wide.css';
 @import 'components/nav-primary.css';
