Adjust ending grid of header_nav at lg widths.

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -124,6 +124,10 @@
     box-shadow: none;
   }
 
+  @media (--lg) {
+    grid-column: 5 / 14;
+  }
+
   &[aria-expanded="true"] {
     visibility: visible;
     transform: translatex(0);
