--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -21,6 +21,10 @@
     padding: 0;
     display: flex;
     align-items: center;
+
+    @media (--nav) {
+      flex-direction: row-reverse;
+    }
   }
 
   .button--primary {
@@ -38,6 +42,11 @@
 
   li:not(:last-child) {
     margin-right: var(--sp1-5);
+
+    @media (--nav) {
+      margin-right: 0;
+      margin-left: var(--sp1-5);
+    }
   }
 }
 
