--- a/src/css/components/main.css
+++ b/src/css/components/main.css
@@ -7,6 +7,7 @@ main {
   grid-column: 1 / 7;
   padding-bottom: var(--sp3);
   line-height: var(--sp1-5);
+  font-family: var(--font-serif);
   color: #313637;
 
   @media (--grid-md) {
@@ -20,7 +21,6 @@ main {
   }
 
   .lead {
-    font-family: var(--font-serif);
     font-weight: bold;
     color: #0D1214;
     letter-spacing: -0.01em;
@@ -37,6 +37,7 @@ main {
     letter-spacing: 0.12em;
     text-transform: uppercase;
     line-height: var(--sp1-5);
+    font-family: var(--font-sans);
     font-size: 16px;
     color: black;
 
