--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -31,22 +31,40 @@
     }
   }
 
-  .button--primary {
-    display: inline-block;
-    padding: 0 var(--sp);
-    background-color: var(--blue-dark);
-    color: white;
-    font-weight: bold;
-    line-height: var(--sp2);
-    white-space: nowrap;
-  }
-
   li:not(:last-child) {
     margin-right: var(--sp1-5);
 
     @media (--nav) {
       margin-right: 0;
       margin-left: var(--sp2);
+    }
+  }
+
+  a:not(.button--primary) {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    height: var(--sp2);
+
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background-color: currentColor;
+      opacity: 0;
+      transform: translatey(5px);
+      transition: opacity 0.2s, transform 0.2s;
+    }
+
+    &:focus,
+    &:hover {
+      &:after {
+        opacity: 0.8;
+        transform: translatey(0);
+      }
     }
   }
 }
