Grid gaps should be 36px at wide widths.

--- a/src/css/base/layout.css
+++ b/src/css/base/layout.css
@@ -18,6 +18,7 @@
 
   @media (--grid-md) {
     grid-template-columns: repeat(var(--grid-col-count--md), 1fr);
+    grid-column-gap: var(--grid-gap--md);
   }
 }
 
