--- a/src/css/components/embedded-media.css
+++ b/src/css/components/embedded-media.css
@@ -7,24 +7,24 @@ figure {
 
     @media (--grid-md) {
       float: right;
-      width: calc(5 * var(--grid-col-width--md) + 4 * var(--grid-gap));
-      margin-right: calc(-2 * ((var(--grid-col-width--md) + var(--grid-gap))));
+      width: calc(5 * var(--grid-col-width--md) + 4 * var(--grid-gap--md));
+      margin-right: calc(-2 * ((var(--grid-col-width--md) + var(--grid-gap--md))));
       margin-left: var(--sp);
     }
 
     @media (--lg) {
-      width: calc(5 * var(--grid-col-width--lg) + 4 * var(--grid-gap));
-      margin-right: calc(-2 * ((var(--grid-col-width--lg) + var(--grid-gap))));
+      width: calc(5 * var(--grid-col-width--lg) + 4 * var(--grid-gap--lg));
+      margin-right: calc(-2 * ((var(--grid-col-width--lg) + var(--grid-gap--lg))));
     }
 
     @media (--nav) {
-      width: calc(4 * var(--grid-col-width--nav) + 3 * var(--grid-gap));
-      margin-right: calc(-3 * ((var(--grid-col-width--nav) + var(--grid-gap))));
+      width: calc(4 * var(--grid-col-width--nav) + 3 * var(--grid-gap--nav));
+      margin-right: calc(-3 * ((var(--grid-col-width--nav) + var(--grid-gap--nav))));
     }
 
     @media (--grid-max) {
-      width: calc(4 * var(--grid-col-width--max) + 3 * var(--grid-gap));
-      margin-right: calc(-3 * ((var(--grid-col-width--max) + var(--grid-gap))));
+      width: calc(4 * var(--grid-col-width--max) + 3 * var(--grid-gap--max));
+      margin-right: calc(-3 * ((var(--grid-col-width--max) + var(--grid-gap--max))));
     }
   }
 }
