--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -14,9 +14,21 @@
   font-size: 14px;
 
   @media (--nav) {
+    position: relative;
+    display: flex;
     margin-left: var(--sp1-5);
     padding-left: var(--sp2);
-    border-left: solid 2px #D7E1E8;
+
+    &:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translatey(-50%);
+      height: var(--sp2);
+      width: 2px;
+      background-color: #D7E1E8;
+    }
   }
 
   ul {
@@ -75,10 +87,16 @@
   border: 0;
   background: transparent;
   margin-left: var(--sp2);
+  height: var(--sp6);
+  background: black;
   cursor: pointer;
 
   @media (--nav) {
     display: block;
     margin-left: var(--sp1-5);
+  }
+
+  img {
+    background: white;
   }
 }
