--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -14,6 +14,12 @@
   }
 
   @media (--nav) {
-    display: none;
+    position: fixed;
+    display: block;
+    width: 100%;
+    left: 0;
+    top: 180px;
+    background: black;
+    padding: 72px;
   }
 }
