--- a/src/css/base/layout.css
+++ b/src/css/base/layout.css
@@ -29,6 +29,9 @@
 
 .content {
   @media (--nav) {
+    /* position: relative;
+    background: white;
+    z-index: 5; */
     display: flex;
     flex-direction: row-reverse;
   }
