--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -1,4 +1,26 @@
 .search-wrapper {
+  @media (--nav) {
+    position: absolute;
+    visibility: hidden;
+    width: 100vw;
+    height: calc(10 * var(--sp));
+    max-width: var(--max-bg-color);
+    max-height: 0;
+    overflow: hidden;
+    left: 0;
+    top: 180px;
+    background: black;
+    border-left: solid 90px #333;
+    padding: 0;
+    z-index: -1;
+    transition: all 0.2s;
+
+    &[aria-expanded="true"] {
+      visibility: visible;
+      max-height: calc(10 * var(--sp));
+    }
+  }
+
   input[type="search"] {
     -webkit-appearance: none;
     border: 0;
@@ -11,15 +33,70 @@
     padding: var(--sp2);
     font-family: serif;
     font-size: 16px;
+
+    @media (--nav) {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: var(--sp4);
+      background-color: black;
+      color: white;
+      font-size: 24px;
+    }
   }
+}
+
+.header-nav__search-button {
+  display: none;
+  -webkit-appearance: none;
+  border: 0;
+  background: transparent;
+  margin-left: var(--sp2);
+  height: var(--sp6);
+  width: var(--sp3);
+  cursor: pointer;
 
   @media (--nav) {
-    position: fixed;
+    position: relative;
     display: block;
-    width: 100%;
-    left: 0;
-    top: 180px;
-    background: black;
-    padding: 72px;
+    margin-left: var(--sp0-5);
+
+    &:focus {
+      outline: 0;
+    }
+
+    &[aria-expanded="true"] {
+      background: black;
+
+      &:before,
+      &:after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: var(--sp1-5);
+        height: 2px;
+        background-color: white;
+      }
+
+      &:before {
+        transform: translate(-50%, -50%) rotate(-45deg);
+      }
+
+      &:after {
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
+
+      img {
+        display: none;
+      }
+    }
+
+    img {
+      margin: 0 auto;
+    }
   }
 }
