--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -41,10 +41,10 @@
       width: 100%;
       height: 100%;
       margin: 0;
-      padding: var(--sp4);
+      padding: var(--sp4) var(--sp4) var(--sp4) calc(13 * var(--sp));
       background-color: black;
       color: white;
-      font-size: 24px;
+      font-size: 28px;
     }
   }
 }
