--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -3,21 +3,32 @@
     position: absolute;
     visibility: hidden;
     width: 100vw;
-    height: calc(10 * var(--sp));
+    height: var(--sp8);
     max-width: var(--max-bg-color);
     max-height: 0;
     overflow: hidden;
     left: 0;
     top: 100%;
     background: black;
-    border-left: solid var(--content-left) #333;
+    border-left: solid var(--content-left) #313637;
     padding: 0;
     z-index: -1;
     transition: all 0.2s;
 
     &[aria-expanded="true"] {
       visibility: visible;
-      max-height: calc(10 * var(--sp));
+      max-height: var(--sp8);
+    }
+  }
+
+  form {
+    @media (--nav) {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      max-width: calc(var(--max-width) - var(--content-left) - var(--sp2));
     }
   }
 
@@ -44,8 +55,27 @@
       padding: var(--sp4) var(--sp4) var(--sp4) calc(13 * var(--sp));
       background-color: black;
       color: white;
-      font-size: 28px;
+      font-size: 32px;
+
+      &:focus {
+        outline: 0; /* Input will not show *unless* it is in focus. */
+      }
     }
+  }
+
+  input[type="submit"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: 100%;
+    background-color: transparent;
+    border: 0;
+    background-image: url('/images/search--white.svg');
+    background-position: center right;
+    background-repeat: no-repeat;
+    text-indent: -999px;
+    cursor: pointer;
   }
 }
 
