--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -23,12 +23,8 @@
 
   form {
     @media (--nav) {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      max-width: calc(var(--max-width) - var(--content-left) - var(--sp2));
+      position: relative;
+      grid-column: 1 / -2;
     }
   }
 
@@ -46,14 +42,16 @@
     font-size: 16px;
 
     @media (--nav) {
-      position: absolute;
+      /* position: absolute;
       left: 0;
       top: 0;
       width: 100%;
-      height: 100%;
+      height: 100%; */
+      grid-column: 1 / 14;
+      align-self: stretch;
       margin: 0;
-      padding: var(--sp4) var(--sp4) var(--sp4) calc(13 * var(--sp));
-      background-color: black;
+      padding: var(--sp4) var(--sp4) var(--sp4) var(--sp9);
+      background-color: transparent;
       color: white;
       font-size: 32px;
 
