--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -1,4 +1,15 @@
 .search-wrapper {
+  margin-bottom: var(--sp2);
+  margin-left: calc(-1 * var(--sp));
+  margin-right: calc(-1 * var(--sp));
+  background: black;
+
+  /* 500px is the width of the primary nav at mobile. */
+  @media (min-width: 500px) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   @media (--nav) {
     position: absolute;
     visibility: hidden;
@@ -6,10 +17,10 @@
     height: var(--sp8);
     max-width: var(--max-bg-color);
     max-height: 0;
+    margin: 0;
     overflow: hidden;
     left: 0;
     top: 100%;
-    background: black;
     border-left: solid var(--content-left) #313637;
     padding: 0;
     z-index: -1;
@@ -22,50 +33,63 @@
   }
 
   form {
+    display: flex;
+
     @media (--nav) {
-      position: relative;
-      display: flex;
+      /* position: relative; */
       grid-column: 1 / 14;
     }
   }
 
   input[type="search"] {
+    flex-grow: 1;
     -webkit-appearance: none;
-
     border: 0;
-    background-color: #F1F4F7;
-    margin-left: calc(-1 * var(--sp));
-    margin-right: calc(-1 * var(--sp));
-    margin-bottom: var(--sp2);
+    background-color: transparent;
     width: calc(100% + 2 * var(--sp));
     height: calc(3 * var(--sp));
-    padding: var(--sp2);
+    padding: 0 var(--sp);
     font-family: serif;
     font-size: 16px;
+    color: white;
+
+    @media (--md) {
+      padding: var(--sp2);
+    }
 
     @media (--nav) {
-      flex-grow: 1;
-      margin: 0;
       padding: var(--sp4) var(--sp4) var(--sp4) var(--sp10);
-      background-color: transparent;
-      color: white;
       font-size: 32px;
-
-      &:focus {
-        outline: 0; /* Input will not show *unless* it is in focus. */
-      }
     }
   }
 
   input[type="submit"] {
-    width: 100px;
+    width: var(--sp3);
     background-color: transparent;
     border: 0;
     background-image: url('/images/search--white.svg');
-    background-position: center right;
+    background-position: center;
     background-repeat: no-repeat;
+    background-size: 20px;
     text-indent: -999px;
     cursor: pointer;
+
+    @media (--md) {
+      width: 100px;
+      background-size: auto;
+    }
+
+    @media (--nav) {
+      width: 100px;
+      background-position: center right;
+    }
+  }
+}
+
+.search-container {
+  @media (--nav) {
+    padding-left: var(--sp2);
+    padding-right: var(--sp2);
   }
 }
 
